added src/README.md for instructions on setting up Pulsar, running simulations and getting simulation results.

--- a/notebooks/pulsar_sql.ipynb
+++ b/notebooks/pulsar_sql.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -475,40 +475,6 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>aa675925-d589-49dc-889d-33c7970db7a4</td>\n",
-       "      <td>c110</td>\n",
-       "      <td>a98bbb1d-0b82-4862-985a-f3c21c4c7758</td>\n",
-       "      <td>pass</td>\n",
-       "      <td>rand_nums</td>\n",
-       "      <td>1.602636e+09</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2020-10-13 19:33:43.173</td>\n",
-       "      <td>(846,2,0)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>standalone-7-401</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3bf1a566-1df9-4595-b98f-ce696da00fee</td>\n",
-       "      <td>c110</td>\n",
-       "      <td>a98bbb1d-0b82-4862-985a-f3c21c4c7758</td>\n",
-       "      <td>pass</td>\n",
-       "      <td>rand_nums</td>\n",
-       "      <td>1.602636e+09</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>None</td>\n",
-       "      <td>2020-10-13 19:34:13.788</td>\n",
-       "      <td>(846,3,0)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>standalone-7-404</td>\n",
-       "      <td>None</td>\n",
-       "      <td>{}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>f1210e45-7d34-4f4d-9004-77dde83b08b8</td>\n",
        "      <td>c110</td>\n",
        "      <td>a98bbb1d-0b82-4862-985a-f3c21c4c7758</td>\n",
@@ -525,7 +491,7 @@
        "      <td>{}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>1</th>\n",
        "      <td>cec743cd-ff85-4824-8e0b-b6044a410733</td>\n",
        "      <td>c110</td>\n",
        "      <td>a98bbb1d-0b82-4862-985a-f3c21c4c7758</td>\n",
@@ -541,37 +507,92 @@
        "      <td>None</td>\n",
        "      <td>{}</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>aa675925-d589-49dc-889d-33c7970db7a4</td>\n",
+       "      <td>c110</td>\n",
+       "      <td>a98bbb1d-0b82-4862-985a-f3c21c4c7758</td>\n",
+       "      <td>pass</td>\n",
+       "      <td>rand_nums</td>\n",
+       "      <td>1.602636e+09</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-10-13 19:33:43.173</td>\n",
+       "      <td>(846,2,0)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>standalone-7-401</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3bf1a566-1df9-4595-b98f-ce696da00fee</td>\n",
+       "      <td>c110</td>\n",
+       "      <td>a98bbb1d-0b82-4862-985a-f3c21c4c7758</td>\n",
+       "      <td>pass</td>\n",
+       "      <td>rand_nums</td>\n",
+       "      <td>1.602636e+09</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-10-13 19:34:13.788</td>\n",
+       "      <td>(846,3,0)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>standalone-7-404</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>c848eaad-be8a-488d-8e97-0f4fe481fbc0</td>\n",
+       "      <td>c110</td>\n",
+       "      <td>a98bbb1d-0b82-4862-985a-f3c21c4c7758</td>\n",
+       "      <td>pass</td>\n",
+       "      <td>rand_nums</td>\n",
+       "      <td>1.602636e+09</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2020-10-13 19:34:44.429</td>\n",
+       "      <td>(846,4,0)</td>\n",
+       "      <td>0</td>\n",
+       "      <td>standalone-7-407</td>\n",
+       "      <td>None</td>\n",
+       "      <td>{}</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                           allocationid customer  \\\n",
-       "0  aa675925-d589-49dc-889d-33c7970db7a4     c110   \n",
-       "1  3bf1a566-1df9-4595-b98f-ce696da00fee     c110   \n",
-       "2  f1210e45-7d34-4f4d-9004-77dde83b08b8     c110   \n",
-       "3  cec743cd-ff85-4824-8e0b-b6044a410733     c110   \n",
+       "0  f1210e45-7d34-4f4d-9004-77dde83b08b8     c110   \n",
+       "1  cec743cd-ff85-4824-8e0b-b6044a410733     c110   \n",
+       "2  aa675925-d589-49dc-889d-33c7970db7a4     c110   \n",
+       "3  3bf1a566-1df9-4595-b98f-ce696da00fee     c110   \n",
+       "4  c848eaad-be8a-488d-8e97-0f4fe481fbc0     c110   \n",
        "\n",
        "                                  jobid result service_name     timestamp  \\\n",
        "0  a98bbb1d-0b82-4862-985a-f3c21c4c7758   pass    rand_nums  1.602636e+09   \n",
        "1  a98bbb1d-0b82-4862-985a-f3c21c4c7758   pass    rand_nums  1.602636e+09   \n",
        "2  a98bbb1d-0b82-4862-985a-f3c21c4c7758   pass    rand_nums  1.602636e+09   \n",
        "3  a98bbb1d-0b82-4862-985a-f3c21c4c7758   pass    rand_nums  1.602636e+09   \n",
+       "4  a98bbb1d-0b82-4862-985a-f3c21c4c7758   pass    rand_nums  1.602636e+09   \n",
        "\n",
        "   __partition__ __event_time__         __publish_time__ __message_id__  \\\n",
-       "0             -1           None  2020-10-13 19:33:43.173      (846,2,0)   \n",
-       "1             -1           None  2020-10-13 19:34:13.788      (846,3,0)   \n",
-       "2             -1           None  2020-10-13 19:32:41.676      (846,0,0)   \n",
-       "3             -1           None  2020-10-13 19:33:12.565      (846,1,0)   \n",
+       "0             -1           None  2020-10-13 19:32:41.676      (846,0,0)   \n",
+       "1             -1           None  2020-10-13 19:33:12.565      (846,1,0)   \n",
+       "2             -1           None  2020-10-13 19:33:43.173      (846,2,0)   \n",
+       "3             -1           None  2020-10-13 19:34:13.788      (846,3,0)   \n",
+       "4             -1           None  2020-10-13 19:34:44.429      (846,4,0)   \n",
        "\n",
        "   __sequence_id__ __producer_name__ __key__ __properties__  \n",
-       "0                0  standalone-7-401    None             {}  \n",
-       "1                0  standalone-7-404    None             {}  \n",
-       "2                0  standalone-7-395    None             {}  \n",
-       "3                0  standalone-7-398    None             {}  "
+       "0                0  standalone-7-395    None             {}  \n",
+       "1                0  standalone-7-398    None             {}  \n",
+       "2                0  standalone-7-401    None             {}  \n",
+       "3                0  standalone-7-404    None             {}  \n",
+       "4                0  standalone-7-407    None             {}  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,6 +600,30 @@
    "source": [
     "df = presto_query(\"SELECT * FROM check\", schema='c110/rand_nums')\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['allocationid', 'customer', 'jobid', 'result', 'service_name',\n",
+       "       'timestamp', '__partition__', '__event_time__', '__publish_time__',\n",
+       "       '__message_id__', '__sequence_id__', '__producer_name__', '__key__',\n",
+       "       '__properties__'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
    ]
   },
   {
